# MLSPProject

./: .gitignore  README.md
MidiToAscii/: .classpath  .gitignore  .project  219.midi
MidiToAscii/Output/: 126  133  188  219  707  A Beggin' I Will Go.txt  Go Tell it on the Mountain.txt  Greensleves.txt  Jennie Jenkins.txt  John Barleycorn.txt  Paddy on the Railway.txt
MidiToAscii/src/: 126.midi  133.midi  161.midi  188.midi  296.midi  351.midi  42.midi  47.midi  542.midi  573.midi  575.midi  609.midi  659.midi  695.midi  707.midi  77.midi  778.midi  789.midi  791.midi  848.midi  MidiToAsciiConverter.java  ScoreListener.java
data/: README  README.md  correctOnsets.m  find_onsets.py  generateLabs.m  generateLabs.m~  generateSls.m  markOnsets.m  markOnsets.m~
data/baroque/: A Begging.wav.out  Aiken Drum.onsets  Edward.onsets  Edward.wav.out  Frere Jacques.onsets  Frere Jacques.wav.out  Go Tell It On The Mountain.onsets  Go Tell It On The Mountain.wav.out  Greensleves.onsets  Hey Ho The Morning Dew.onsets  Hey Ho The Morning Dew.wav.out  I'll Tell You Of A Fellow.onsets  I'll Tell You of a Fellow.wav.out  Jennie Jenkins Slow.onsets  Jennie Jenkins Slow.wav.out  Jenny Jenkins Slow.wav.out  Jenny Jenkins.onsets  Jenny Jenkins.wav.out  John Barleycorn.onsets  John Barleycorn.wav.out  Lisbon.onsets  Lisbon.wav.out  Nae Bonnie Laddie.onsets  Nae Bonnie Laddie.wav.out  Paddy on the Railway.onsets  Paddy on the Railway.wav.out  (+14 more)
onsets/: CMakeLists.txt  README  aubio_detector.cpp  aubio_detector.h  config.h.in  detector.h  graph_writer.cpp  graph_writer.h  main.cpp  writer.h
(+261 files in other folders)
